[package]
name = "rusty_console_game_engine"
version = "0.1.0"
edition = "2024"
authors = ["Sahil Dash"]
description = "A Rust port of the olcConsoleGameEngine"
license = "MIT"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_Globalization",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

# used for examples
[dev-dependencies]
rand = "0.9.2"
