[package]
name = "rusty_console_game_engine"
version = "0.3.0"
edition = "2021"
authors = ["Sahil Dash <sahildash7704@gmail.com>"]
description = "A Rust port of the olcConsoleGameEngine"
license = "MIT"
documentation = "https://docs.rs/rusty_console_game_engine"
homepage = "https://github.com/rip-super/RustyConsoleGameEngine"
repository = "https://github.com/rip-super/RustyConsoleGameEngine"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_Globalization",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media_Audio",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

# used for examples
[dev-dependencies]
rand = "0.9.2"
